--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "5.9.1",
     "next": "latest",
+    "prisma": "^5.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
